@@ -30,6 +30,10 @@ body {
 
 <div class="content">
 
+<h2>Transifex</h2>
+
+<p>Our preferred method of handling translations is through <a href="https://www.transifex.com/flareorg/">Transifex</a>. However, you&rsquo;re more than welcome to edit the local files and submit them via pull request or <a href="mailto:jajdorkster@gmail.com">email</a>.</p>
+
 <h2>Translation file locations</h2>
 
 <p>The main engine translation file is at:</p>
